--- a/TiresShop.UI/Pages/Admin/Index.cshtml
+++ b/TiresShop.UI/Pages/Admin/Index.cshtml
@@ -3,20 +3,19 @@
 @{
 }
 <div id="app">
-    <input type="number" @@change="alert('hello')" v-model="price" />
-    <button v-on:click="togglePrice">Toggle</button>
+    
     <button v-on:click="getProducts">GetProducts</button>
-    <br />
-    <p v-show="showPrice">
-        {{price}}
-    </p>
-    <p v-if="showPrice">
-        {{formatPrice}}
-    </p>
     <div>
         <p v-for="product in products">
             {{product.id}} - {{product.name}} - {{product.description}} - {{product.value}}
         </p>
+    </div>
+    <div>
+
+        <input v-model="productModel.name" />
+        <input v-model="productModel.description" />
+        <input v-model="productModel.value" />
+        <button @@click="createProduct"> Create Product</button>
     </div>
 </div>
 
